i have fixed the spacing issue of activities dropdown and removed the assessments from create timetable page.

--- a/app/static/timetable.css
+++ b/app/static/timetable.css
@@ -130,3 +130,6 @@
 .timeslot:active {
     background-color: lightgray; /* Color change on cell click */
 }
+.activity-box select {
+    margin-right: 5px;
+}
